app-manifests/base/demo-web-canary/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo-web-canary
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app:  demo-web-canary
  template:
    metadata:
      labels:
        app: demo-web-canary
    spec:
      containers:
        - name: demo-web-canary
          image: demo-web-canary
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
  strategy:
    canary:
      canaryService: demo-web-canary
      stableService: demo-web-stable
      trafficRouting:
        nginx:
          stableIngress: demo-web-canary-ingress
          additionalIngressAnnotations:
            canary-by-header: canary
            canary-by-header-value: yep
      steps:
      - setWeight: 50
      - pause: {duration: 180}
      - setWeight: 100
      - pause: {duration: 300}
      # steps:
      # - setWeight: 10
      # - pause: {}
      # - setWeight: 40
      # - pause: {duration: 10}
      # - setWeight: 60
      # - pause: {duration: 10}
      # - setWeight: 80
      # - pause: {duration: 10}
