app-manifests/base/demo-web-canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   cloud.google.com/backend-config: '{"default": "demo-web-config"}'
  name: demo-web-canary-service
spec:
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 8888
  selector:
    app: demo-web-canary
