app-manifests/base/demo-web-canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-web-canary-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: nginx-private
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: demo-web-canary-dev.squantumengine.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-web-canary-service
                port:
                  number: 8888
  tls:
  - hosts: 
    - demo-web-canary-dev.squantumengine.com
    secretName: demo-web-canary-tls-secret
